--- a/style.css
+++ b/style.css
@@ -132,6 +132,12 @@ body {
     transition: .25s;
 }
 
+.moreInfo.open,
+.moreInfo:hover{
+    background-color: #55569e;
+    border-color: #55569e;
+}
+
 .moreInfo .trigger {
     display: flex;
     flex-direction: row;
@@ -143,12 +149,6 @@ body {
     background-color: transparent;
     color: #fff;
     border: none;
-}
-
-.moreInfo.open,
-.moreInfo:hover{
-    background-color: #55569e;
-    border-color: #55569e;
 }
 
 .moreInfo .trigger:hover {
@@ -163,11 +163,12 @@ body {
     background-repeat: no-repeat;
     background-size: contain;
     background-image: url(./imgs/arrow-top.svg);
-    transform: .25s;
+    transform: rotate(180deg);
+    transition: .25s;
 }
 
 .moreInfo.open .trigger::after {
-    transform: rotate(180deg);
+    transform: rotate(0deg);
 }
 
 .moreInfo .content {
@@ -182,6 +183,35 @@ body {
     padding: 0 1rem 1rem 2rem;
     height: auto;
     opacity: 1;
+}
+
+.lenguages{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.lenguages li {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-right: 1rem;
+    font-weight: 700;
+}
+
+.lenguages li::before{
+    content: '';
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    background-image: url(./imgs/check.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin: .5rem;
 }
 
 /* responsividade de tela desktop/notebook */
