--- a/style.css
+++ b/style.css
@@ -14,6 +14,15 @@ body {
     color: #fff;
 }
 
+a {
+    color: #fff;
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
 .main {
     padding: 1rem;
     margin: 1rem;
@@ -238,16 +247,6 @@ body {
     font-size: 1.25rem;
     font-weight: 700;
     margin-bottom: .5rem;
-}
-
-.portifolio li a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.portifolio li a:hover {
-    color: #fff;
-    text-decoration: underline;
 }
 
 .portifolio li .title.github::before {
