--- a/style.css
+++ b/style.css
@@ -160,6 +160,12 @@ a:hover{
     border: none;
 }
 
+.moreInfo .trigger h2 {
+    margin: 0;
+    font-size: 1.5rem;
+    text-align: start;
+}
+
 .moreInfo .trigger:hover {
     cursor: pointer;
 }
@@ -260,6 +266,34 @@ a:hover{
     margin: .5rem;
 }
 
+.experience {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.experience li {
+    margin-bottom: 1rem;
+}
+
+.experience li .period {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.experience li .period::before {
+    content: '';
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    background-image: url(./imgs/calendar.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin: .5rem;
+}
 /* responsividade de tela desktop/notebook */
 @media (min-width: 768px) {
     .main {
