Upgrade das skills

--- a/style.css
+++ b/style.css
@@ -294,6 +294,42 @@ a:hover{
     background-size: contain;
     margin: .5rem;
 }
+
+.skills {
+    display: flex;
+    flex-direction: column;
+}
+
+.skills .tools ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.skills .tools ul li img {
+    max-width: 50px;
+    margin: 0 .5rem;
+}
+
+.skills .personal ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+}
+
+.skills .personal ul li {
+    margin-left: 2rem;
+    padding: .5rem;
+}
 /* responsividade de tela desktop/notebook */
 @media (min-width: 768px) {
     .main {
@@ -324,5 +360,10 @@ a:hover{
 
     .header .informations {
         grid-area: information;
+    }
+
+    .skills {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
     }
 }
